--- a/rdltr_front/src/scss/base.scss
+++ b/rdltr_front/src/scss/base.scss
@@ -89,6 +89,12 @@ body {
   width: 100%;
 }
 
+.icon-transparent {
+  border-color: transparent;
+  background: none;
+  padding: 0;
+}
+
 .rdltr-box {
   border: 1px solid #eee;
   box-shadow: 0 2px 3px #ccc;
@@ -105,6 +111,7 @@ body {
 @media screen and (max-width: 400px) {
   .rdltr-box {
     width: auto;
+    margin: 30px 10px;
   }
 }
 
